# rusty-sak

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  Packager.toml  README.md  build.rs  justfile
.cargo/: config.toml
.cargo-packager/dmg/: RustySak.icns
.github/workflows/: release.yml
src/: main.rs  nsp.rs  utils.rs  xci.rs
ui/: components.slint  main_window.slint  windows.slint
