[package]
name = "rusty_sak"
version = "0.1.1"
description = "A version of SAK written in rust"
license = "MIT"
homepage = "https://rusty-sak.github.io/"
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1.8.0"
open = "5"
tokio = { version = "1.40.0", features = ["full"] }
mio = "1.0.2"
fatfs = { version = "0.3.6", features = ["alloc"] }
rfd = "0.15.0"
cargo-packager = "0.11.0"
cargo-packager-updater = "0.2.2"

[build-dependencies]
slint-build = "1.8.0"
